--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.20.1",
     "date-fns": "^2.30.0",
+    "get-youtube-id": "^1.0.1",
     "next": "13.5.5",
     "next-sanity": "^5.5.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.13.0",
+    "react-youtube": "^10.1.0",
     "sanity": "^3.20.1",
     "sanity-plugin-media": "^2.2.4",
     "styled-components": "^5.3.11"
