--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-player": "^2.13.0",
     "react-youtube": "^10.1.0",
+    "reactjs-popup": "^2.0.6",
     "sanity": "^3.20.1",
     "sanity-plugin-media": "^2.2.4",
     "styled-components": "^5.3.11"
