--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@portabletext/react": "^3.0.11",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.20.1",
+    "@vercel/analytics": "^1.1.1",
     "date-fns": "^2.30.0",
     "get-youtube-id": "^1.0.1",
     "next": "13.5.5",
